--- a/index.html
+++ b/index.html
@@ -1,27 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume - GIS Student Portfolio</title>
+  <title>Global</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>My Resume</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="projects.html">Projects</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section>
-    <!-- Your resume content here -->
-  </section>
-  <footer>
-    <p>&copy; 2024 GIS Student Portfolio</p>
-  </footer>
+
+<div class="notification">
+  <p class="notification-message">Please rotate your device to view this content.</p>
+</div>
+
+<header>
+  <div class="logo">
+    <img src="assets/img/logo.png" alt="Global Logo">
+    <p>Global</p>
+  </div>
+  <button class="cta">Hire Us</button>
+  <div class="nav-toggle">
+    <span></span>
+  </div>
+</header>
+
+<nav class="side-nav">
+  <ul>
+    <li class="is-active"><span>Home</span></li>
+    <li><span>Works</span></li>
+    <li><span>About</span></li>
+    <li><span>Contact</span></li>
+    <li><span>Hire us</span></li>
+  </ul>
+</nav>
+
+<ul class="main-content">
+  <li class="section section--is-active">
+    <div class="intro">
+      <h1>Your next<br>interactive<br>experience</h1>
+      <button class="cta">Hire Us</button>
+      <img src="assets/img/introduction-visual.png" alt="Welcome">
+    </div>
+  </li>
+  <li class="section">
+    <div class="work">
+      <h2>Selected work</h2>
+      <div class="work--lockup">
+        <!-- Your work items here -->
+      </div>
+    </div>
+  </li>
+  <li class="section">
+    <div class="about">
+      <h2>We<br>believe in<br>passionate<br>people</h2>
+      <div class="about--banner">
+        <a href="#">Career</a>
+        <img src="assets/img/about-visual.png" alt="About Us">
+      </div>
+    </div>
+  </li>
+  <li class="section">
+    <div class="contact">
+      <div class="modal">
+        <div class="modal--information">
+          <p>Pawia 5, 31-154 Kraków, Poland</p>
+          <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
+          <a href="tel:+148126287560">+48 12 628 75 60</a>
+        </div>
+        <ul class="modal--options">
+          <li><a href="#">Bēhance</a></li>
+          <li><a href="#">Dribbble</a></li>
+          <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+  </li>
+  <li class="section">
+    <div class="hire">
+      <h2>You want us to do</h2>
+      <!-- Hire us form here -->
+    </div>
+  </li>
+</ul>
+
+<ul class="outer-nav">
+  <li class="is-active">Home</li>
+  <li>Works</li>
+  <li>About</li>
+  <li>Contact</li>
+  <li>Hire us</li>
+</ul>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="functions.js"></script>
 </body>
 </html>
